--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT = 8000
 NODE_EVN = 'dev'
-DB_URL = 'bont'
+DB_URL = mongodb+srv://devhype7:happybirthday@mary-messages.tsqzj1m.mongodb.net/hbs_posts?retryWrites=true&w=majority
