--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^1.6.2",
     "blob-util": "^2.0.2",
+    "node-base64-image": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
